--- a/notebooks/TinyNeRF.ipynb
+++ b/notebooks/TinyNeRF.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMyq83TBsgzQp3IKLMLroyc",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/pooraniravi/projectNeRF/blob/master/TinyNeRF.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -85,7 +73,7 @@
       "metadata": {
         "id": "B4DtZlzT-jRq"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,12 +85,12 @@
       "metadata": {
         "id": "p7DzPw3bG155"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -182,7 +170,7 @@
       "metadata": {
         "id": "5c7C3K4zGQoe"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -199,7 +187,7 @@
         "id": "cwryDPfSJKZO",
         "outputId": "0320bd9d-9c77-41af-ae29-2b66a37bd9db"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,7 +242,7 @@
       "metadata": {
         "id": "AQ420cQYcOcy"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -280,7 +268,7 @@
       "metadata": {
         "id": "Ronl1c9KiuV2"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -314,7 +302,7 @@
       "metadata": {
         "id": "SmUzQegeozNj"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -342,7 +330,7 @@
       "metadata": {
         "id": "d16PVUsEdZtg"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -385,7 +373,7 @@
       "metadata": {
         "id": "-QCuttppYgYL"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -405,7 +393,7 @@
       "metadata": {
         "id": "imxk7J45uGQu"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -418,7 +406,7 @@
       "metadata": {
         "id": "dsNSlyxsDAQ9"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -448,7 +436,7 @@
       "metadata": {
         "id": "Yuptuwpu9w_f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -508,7 +496,7 @@
         "id": "EfAuzzi535lV",
         "outputId": "3fe2503b-56f3-4620-e87d-157e024eed36"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
